--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ referrerpolicy="no-referrer" />
           </ul>
         <div>
           <ul class="menu-contact">
-            <li class="menu-contact__item"><a href="tel:+380961111111" class="menu-contact__link" >
+            <li class=" menu-contact__item "><a href="tel:+380961111111" class="menu-contact__link tel" >
               +38 096 111 11 11</a></li>
               <li class="menu-contact__item"><a href="mailto:info@devstudio.com" class="menu-contact__link">
                 info@devstudio.com</a></li>
